# telegram-manager

./: .gitignore
.github/workflows/: backend-ci.yml
backend/: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
backend/.cursor/rules/: telegram-manager-fastapi.mdc
backend/app/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py  database.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_config.py  test_health.py  test_main.py
